[package]
name = "dalmatian"
version = "0.1.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"

[dependencies]
bb8-postgres = "0.3.0"
bb8 = "0.3.0"
tokio-postgres = { version = "0.4.0-rc.2", features = ["with-uuid-0_7"] }
futures = "0.1.26"
tokio = "0.1.18"
bcrypt = "0.4.0"
futures-cpupool = "0.1.8"
serde = "1.0.90"
serde_derive = "1.0.90"
http = "0.1.17"
uuid = { version = "0.7.4", features = ["v4"] }
headers = "0.2.1"
hyper = "0.12.27"
serde_json = "1.0.39"
